--- a/style/style.css
+++ b/style/style.css
@@ -2,24 +2,177 @@ body
 {
     max-width: 1770px;
 }
+.header_container
+{
+    height: 820px;
+    background-image: url("/Website-Design/images/image1.png");
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.head_txt
+{
+    display: flex;
+    flex-direction: column;
+    width: 372px;
+    height: 76px;
+    text-align: center;
+}
+form
+{
+    width: 342px;
+height: 26px;
+}
+.head_txt h1
+{
+    color: #FFFFFF;
+    text-align: center;
+    letter-spacing: 6.82px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 26px;
+}
+.nav
+{
+    background: #5474FD;
+    display: flex;
+    height: 83px;
+    justify-content: space-around;
+    align-items: flex-start;    
+}
+.nav_logo
+{
+    font-family: 'Josefin Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 26px;
+    letter-spacing: 2.4px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    width: 186px;
+    height: 26px;
+}
+.nav_links
+{
+    width: 525px;
+    height: 12px;
+}
+ul
+{
+    display: flex;
+    justify-content: space-around;   
+}
+li
+{
+    font-family: 'Aleo' serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 26px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    list-style: none;   
+}
+.responsive_list
+{
+    display: visible;
+}
 .main_container
 {
-    background-image: url("/images/Image_background.png");
+    background-image: url("/Website-Design/images/Image_background.png");
+    height: 685px;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.main_txt
+{
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    width: 560px;
+}
+.main_txt p
+{
+    font-family: 'Josefin Sans', sans-serif;
+    color: #E8E8E8;
+    letter-spacing: 1.6px;
+}
+.main_txt h1
+{
+    font-family: 'Aleo', serif;
+    font-size: 36px;
+    color: #FFFFFF;
+}
+.main_thumbs
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 .how_it_works
 {
     background-repeat: no-repeat;
-    background-image: url("/images/icon_background.png");
+    background-image: url("/Website-Design/images/icon_background.png");
     height: 337px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+.explore
+{
+    width: 228px;
+    height: 63px;
+    background: #496BFE;
+    font-family: 'Aleo', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.icon_container
+{
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    align-items:center;   
 }
 .icons
 {
     display: flex;
-    justify-self: center;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: space-between;   
+}
+.icons h1
+{
+    font-family: 'Aleo', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 26px;
+    text-align: center;
+    color: #E8E8E8;
+}
+.shape
+{
+    padding-top: 30px;
 }
 .middle_content
 {
-    background-image: url("/images/Image_background2.png");
+    background-image: url("/Website-Design/images/Image_background2.png");
     background-repeat: no-repeat;
     height: 700px;
     align-items: flex-end;
@@ -80,4 +233,43 @@ body
     font-size: 16px;
     line-height: 26px;
     letter-spacing: 1.2px;
+}
+@media screen and (min-width:321px) and (max-width:768px) /* //Mobile */{
+section
+{
+    display: flex;   
+    flex-direction: column;
+}
+.nav {
+    
+}
+
+.og_list
+{
+    display: none;   
+}
+img
+{
+    max-width: 100%;
+}
+.middle_content
+{
+    display: flex;
+    align-items: center;
+}
+.how_it_works
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.shape
+{
+    display: none;
+}
+
+}
+@media screen and (min-width:768px) and (max-width:1000px) /* //Mobile */ 
+{
+
 }
