--- a/style/style.css
+++ b/style/style.css
@@ -274,7 +274,7 @@ img
 }
 
 }
-@media screen and (min-width:768px) and (max-width:1000px) /* //Mobile */ 
+@media screen and (min-width:768px) and (max-width:1000px) /* //Tablet */ 
 {
 
 }
